--- a/README.org
+++ b/README.org
@@ -6,3 +6,4 @@ Indtil videre er der følgende præsentationer:
 - [[./01_printfunktionen/01_printfunktionen.org][01_printfunktionen]]
 - [[./02_Tegn_med_arcade/02_Tegn_med_arcade.org][02_Tegn_med_arcade]]
 - [[./03_Variabler/03_Variable.org][03_Variable]]
+- [[./04_Funktioner/04_Funktioner.org][04_Funktioner]]
