--- a/README.org
+++ b/README.org
@@ -7,3 +7,4 @@ Indtil videre er der følgende præsentationer:
 - [[./02_Tegn_med_arcade/02_Tegn_med_arcade.org][02_Tegn_med_arcade]]
 - [[./03_Variabler/03_Variable.org][03_Variable]]
 - [[./04_Funktioner/04_Funktioner.org][04_Funktioner]]
+- [[./05_Tegn_med_funktioner/05_Tegn_med_funktioner.org][05_Tegn_med_funktioner]]
