--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 Dette repo indeholder en række præsentationer ifm programmeringsundervisningen på Vibenshus Gymnasium.
-Man kan finde de enkelte præsentationer i de forskellige mapper og så vælge .org-filen.
+Man kan finde de enkelte præsentationer i de forskellige mapper og så vælge org-filen.
 
 Indtil videre er der følgende præsentationer:
 
@@ -8,3 +8,4 @@ Indtil videre er der følgende præsentationer:
 - [[./03_Variabler/03_Variable.org][03_Variable]]
 - [[./04_Funktioner/04_Funktioner.org][04_Funktioner]]
 - [[./05_Tegn_med_funktioner/05_Tegn_med_funktioner.org][05_Tegn_med_funktioner]]
+- [[./06_Betinget_udfoerelse/06_Betinget_udfoerelse.org][06_Betinget_udfoerelse]]
